Add some Hitchwiki styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
     <title><%= Settings.product_name %></title>
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
+    <link href="//fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin-ext,latin,cyrillic,greek" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="http://hitchwiki.org/favicon.png" type="image/png" />
+    <link rel="bookmark icon" href="http://hitchwiki.org/favicon.png" type="image/png" />
   </head>
   <!--[if lt IE 9 ]><body class="lt-ie9"><![endif]-->
   <!--[if (gt IE 9)|!(IE)]><!--> <body><!--<![endif]-->
