--- a/app/views/preorder/_copyright.html.erb
+++ b/app/views/preorder/_copyright.html.erb
@@ -1,1 +1,1 @@
-<p class="pull-right">© You. Made by the guys at <a href="https://lockitron.com">Lockitron</a>. MIT License.</p>
+<p class="pull-right">Made with <a href="https://github.com/lockitron/selfstarter">Lockitron's Selfstarter</a>. MIT License.</p>
