--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -7,13 +7,15 @@
     font-size: inherit !important;
   }
 }
-#header 
+#header
 {
   width: 100%;
-  padding: 26px 0;
-  -moz-box-shadow:    0px 1px 3px 0px #acacac;
-  -webkit-box-shadow: 0px 1px 3px 0px #acacac;
-  box-shadow:         0px 1px 3px 0px #acacac;
-  background: #fcfcfc;
+  padding: 60px 0 0 0;
+  /*
+  -moz-box-shadow:    0px 1px 3px 0px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2);
+  box-shadow:         0px 1px 3px 0px rgba(0,0,0,0.2);
+  */
+  background: $orange1;
   position: relative;
 }
