--- a/app/views/preorder/homepage/_other_points.html.erb
+++ b/app/views/preorder/homepage/_other_points.html.erb
@@ -1,20 +1,24 @@
 <div class="gray_background">
-  <ul class="wrapper clearfix" id="other_points">
-    <li id="section-1">
-      <h4>Section 1</h4>
-      <p>Morbi tempus dapibus egestas. Nullam accumsan dolor ut purus ornare congue. Phasellus ac commodo neque. Quisque non ligula lacus, id hendrerit eros.</p>
-    </li>
-    <li id="section-2">
-      <h4>Section 2</h4>
-      <p>Vivamus nec posuere mauris. Suspendisse mi sem, egestas ac tristique ac, varius ac lectus. Sed porttitor dolor adipiscing mauris sagittis.</p>
-    </li>
-    <li id="section-3">
-      <h4>Section 3</h4>
-      <p>Curabitur dolor elit, placerat et malesuada et, tristique vel nulla. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-    </li>
-    <li id="section-4">
-      <h4>Section 4</h4>
-      <p>Curabitur ac mi elit, nec tempor odio. Nam sollicitudin, sapien sit amet elementum pretium, turpis mi fermentum nisl, ac vehicula purus lacus non velit.</p>
-    </li>
-  </ul>
+  <div class="wrapper clearfix" id="other_points">
+    <h3 id="priorities">Priorities</h3>
+    <p id="section-0">We've set our goals so that we have enough time to get at least combined map working. If we have money left, we will organize more hackathons later and work also on other Hitchwiki related projects. More donations will simply allow us to do more.</p>
+    <ul>
+      <li id="section-1">
+        <h4>Goal 1</h4>
+        <p>Combine maps and wiki into one view including markers, descriptions, comments and ratings.</p>
+      </li>
+      <li id="section-2">
+        <h4>Goal 2</h4>
+        <p>Ensure everything works well on mobile with responsive layout. Also new API and check if it's possible to maintain <a href="http://hitchwiki.org/maps/about_api">old maps API</a>.</p>
+      </li>
+      <li id="section-3">
+        <h4>Goal 3</h4>
+        <p>Implement same map features to <a href="http://nomadwiki.org">Nomadwiki</a> and <a href="http://trashwiki.org">Trashwiki</a>. Imagine wild camping places and dumpsters marked on a map.</p>
+      </li>
+      <li id="section-4">
+        <h4>Goal 4</h4>
+        <p>Work on a new project aiming to allow hitchhikers host each other and connect better in "Couch Surfing style". <a href="#">Read more</a></p>
+      </li>
+    </ul>
+  </div>
 </div>
