--- a/app/assets/stylesheets/homepage.css.scss
+++ b/app/assets/stylesheets/homepage.css.scss
@@ -45,3 +45,51 @@
      height: auto;
   }
 }
+
+#intro
+{
+  float: left;
+  width: 412px;
+  padding: 50px;
+  text-align: center;
+  &, h3, h4 {
+    color: #111;
+    line-height: 1.3em;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.05);
+  }
+  @media (max-width: $wrapper_breakpoint) {
+    float: none;
+    width: auto;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media (max-width: $mobile_breakpoint) {
+     width: 100%;
+     height: auto;
+  }
+}
+
+#contact {
+  font-size: 13px;
+  line-height: 1em;
+  &, a {
+    color: #111;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+  small {
+    color: #888;
+  }
+  ul {
+    padding: 50px;
+    list-style:none;
+    li {
+      float: left;
+      margin: 0 10px;
+      padding: 0;
+    }
+  }
+}
