--- a/app/assets/stylesheets/homepage/call_to_action.css.scss
+++ b/app/assets/stylesheets/homepage/call_to_action.css.scss
@@ -24,15 +24,15 @@
     margin: 0 auto;
     width: 300px;
   }
-  #price
+  #note
   {
     color: #4c4c4c;
-    font-size: 22px;
+    font-size: 13px;
     font-family: $primary_font, $secondary_font, $tertiary_font;
     line-height: 1.3;
     display: block;
     margin: 0 auto 10px auto;
-    width: 300px;
+    width: auto;
   }
 }
 .reserve
@@ -48,13 +48,17 @@
 #middle_reserve
 {
   padding: 60px 0;
-  @media (max-width: $wrapper_breakpoint) {
-    width: auto;
-  }
   h2
   {
+    width: 70%;
     margin-bottom: 26px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media (max-width: $wrapper_breakpoint) {
+    width: auto;
+    h2 {
+      width: auto;
+    }
   }
 }
