--- a/app/views/preorder/homepage/_faqs.html.erb
+++ b/app/views/preorder/homepage/_faqs.html.erb
@@ -4,66 +4,76 @@
     <ul>
       <li class=''>
         <details class=''>
-          <summary class=''>How do I setup Amazon Payments?</summary>
-          <p>You'll need to <a href="https://payments.amazon.com/sdui/sdui/accountstatus">create an Amazon Seller Central account</a>. Afterwards, get your access key and secret key from the "Integration" tab on your AWS account. <a href="https://payments.amazon.com/sdui/sdui/helpTab/Checkout-by-Amazon/Advanced-Integration-Help/Using-Your-Access-Key">Click here for more info</a>.
-          <br />
-          <br />
-          Once you have your access key and secret key, head over to <code>config/settings.yml</code>. Change <code>amazon_access_key</code> and <code>amazon_secret_key</code> appropriately.</p>
+          <summary class=''>What if you don't gather enough money?</summary>
+          <p>We will organize the hackathon anyway. It would be shorter and there would be bigger risk in not getting the work done.</p>
         </details>
       </li>
       <li>
         <details class=''>
-          <summary>Can I use another payments provider?</summary>
-          <p>Of course. We haven't built in support for other providers, but we recommend that you take a look at <a href="https://stripe.com">Stripe</a> or <a href="https://wepay.com">WePay</a>.</p>
+          <summary>What if you gather too much money?</summary>
+          <p>
+            We will organize more hackathons later and it'll also allow us to work on other Hitchwiki related projects. See <a href="#priorities">priorities</a> section.
+          </p>
         </details>
       </li>
       <li>
         <details class=''>
-          <summary>How do I edit the FAQ?</summary>
-          <p>The faq is a partial located in <code>app/views/preorder/homepage/_faq.html.erb</code> The <code>summary</code> tag is the title, the <code>p</code> is the body. Make sure to add an <code>li</code> tag for each FAQ entry.</p>
+          <summary>What are your expenses?</summary>
+          <p>
+            Approximate calculation with 10€ food per day and rent between 300—500€ including utilities.
+            <br><br>
+            <u>One month:</u> (rent) + (30 * food per day) = (300-500) + (30 * 10) = <u>600—800 €</u>
+            <br><br>
+            <u>Two months:</u> 2 * 600—800 € = <u>1200—1600 €</u>
+            <br><br>
+            We will open the whole process up at our <a href="https://lite4.framapad.org/p/turkishhackathon">notes</a>.
+          </p>
         </details>
       </li>
       <li>
         <details class=''>
-          <summary>How do I change around the images, product name, etc?</summary>
-          <p>The best way is in <code>config/settings.yml</code>. It has variables for several different parts, the video, the product name, the call to action button ("Fork Now"), and several more.
+          <summary>I have a flat in Turkey!</summary>
+          <p>
+            Whoo great! <a href="#contact">Contact us</a> and let's talk more.
           </p>
         </details>
       </li>
     </ul>
     <ul class='col2'>
-      <li>
-        <details class=''>
-          <summary>How do I change the CSS?</summary>
-          <p>Head over to <code>app/assets/stylesheets/variables.css.scss</code>. It makes it easy to change around the elements used throughout the HTML.
-          <br />
-          <br />
-          Alternatively, you can dive right into the CSS, have a look at <code>app/assets/stylesheets/main.css.scss</code>.</p>
-        </details>
-      </li>
-      <li class=''>
-        <details class=''>
-          <summary>Why did you release this?</summary>
-          <p>Hardware startups are less welcome on Kickstarter than they were 6 months ago. We needed to roll our own kickstarter, so we did. Other hardware startups probably will too, so we made it easier for them by open sourcing our way of doing it.</p>
-        </details>
-      </li>
-      <li class=''>
-        <details class=''>
-          <summary class=''>What software stack does this use?</summary>
-          <p>It's a Ruby on Rails app that makes heavy use of SCSS, Kickstarter's wonderful <code>amazon_flex_pay</code> gem, and a hint of CoffeeScript.</p>
-        </details>
-      </li>
-      <li class=''>
-        <details class=''>
-          <summary class=''>How do I deploy it?</summary>
-          <p>We recommend using Heroku. We include a Procfile for you, so all you need to do is:
-          <p>
-            <p>Install the <a href="https://toolbelt.heroku.com/">Heroku Toolbelt</a></p>
-            <p>Run <code>heroku create</code> in Selfstarter's folder</code></p>
-            <p>Run <code>git push heroku master</code> in Selfstarter's folder</p>
-          </p>
-        </details>
-      </li>
+    <li>
+      <details class=''>
+        <summary>Can I join you?</summary>
+        <p>
+          If you are a developer, see <a href="#team">team</a> section. For purely designers or "I know HTML and CSS" devs there isn't probably gonna be enough of work, sorry!
+          <br><br>
+          We are likely to host some people just like we would host during our "usual" lives, but we try to keep the house quiet enough for productive time. We're not establishing a <a href="http://nomadbase.info/">nomadbase</a>. Please don't choose our hackathon as a travel destination.
+          <br><br>
+          There's a good change our girlfriends will be around at least part of the time, but we'll try to divide food/rent expenses in fair way so that you don't need to worry about funding "outsiders".
+        </p>
+      </details>
+    </li>
+    <li>
+      <details class=''>
+        <summary>Trampy/geeky contacts in Turkey</summary>
+        <p>
+          We definelly need some contacts in Turkey! Connect us with your friends there if possible.
+          <br><br>
+          We'll need help on scouting the flat, possibly with furniture and just friends of course.
+        </p>
+      </details>
+    </li>
+    <li>
+      <details class=''>
+        <summary>Where in Turkey will you be?</summary>
+        <p>
+          We don't know yet exactly, but we're looking into southern parts for it's warmer there. Somewhere between İzmir—Antalya—Adana.
+          <br><br>
+          It might be smaller beautiful town with loads of nature (we love hiking!) or bigger city with students. Smaller place might help us to be more productive though. ;-)
+          <br><br>
+          Do you have tips on great locations?
+        </p>
+      </details>
+    </li>
     </ul>
   </div>
 </div>
