--- a/app/views/preorder/homepage/_key_points.html.erb
+++ b/app/views/preorder/homepage/_key_points.html.erb
@@ -1,51 +1,144 @@
-<div class="big_wrapper">
-  <div class="wrapper" id="one">
-    <div class="point_copy">
-      <h3>
-        Hitchwiki needs some work to be done
-      </h3>
+<div class="big_wrapper" id="roof">
+  <div class="wrapper">
+    <div class="point_copy right darkbox">
+      <h4>
+        Winter escape in hitchhikers -style; we'll rent an apartment from Turkey and get some coding done!
+      </h4>
+      <!--
       <p>
-        .
+         <em>Lorem ipsum</em>
       </p>
+    -->
     </div>
   </div>
 </div>
 
-<div class="big_wrapper">
-  <div class="wrapper" id="two">
-    <div class="point_copy right">
-      <h3>
-        How do I use it?
-      </h3>
-      <p>
-        Selfstarter is a starting point for you to build your own solution. It is set up to collect reservations using Amazon Payments, but you can choose your own provider too.
-      </p>
+<div class="big_wrapper" id="letter">
+  <div class="wrapper">
+      <div class="point_copy full">
+
+        <h4><em>Dear friends and hitchhikers family!</em></h4>
+
+        <p>
+          Behind our belowed <a href="http://hitchwiki.org/">Hitchwiki</a> is a small (but enthusiastic!) tech team. Although we are able to maintain the site and fix problems that occur every now and then, developing new features has always been a bit tricky.
+          <br><br>
+          In recent years Hitchwiki has grown quite a lot; we have over 100 000 unique visitors a month. Due popularity we've felt for quite a while that we should improve the site.
+          <br><br>
+          Our plan is to combine Wiki with Maps into one view:
+          <br><br>
+          <a href="/assets/hitchwiki_2015_pre.png" class="lightbox"><img src="/assets/hitchwiki_2015_pre.png" width="100%" alt=""></a>
+
+        </p>
+
+
+        <div class="bread">
+
+        <br><br>
+
+        So far we've worked mostly in coding sprints, or "hackathons" as we call them:
+
+        <br><br>
+        <ul>
+          <li>
+            In summer 2010 Mikael developed the <a href="http://hitchwiki.org/maps/">map</a> and it took him almost two months.
+            <br><br>
+          </li>
+
+          <li>
+            In May 2013 we gathered at Kasper's house in Brussels and fixed plenty of bugs and created the <a href="http://hitchwiki.org/en/">current new layout</a>. We also started <a href="http://nomadwiki.org/">Nomadwiki</a>.
+            <br><br>
+          </li>
+
+          <li>
+            In winter 2013—2014 Mikael rented a flat from Lisbon, Portugal and <a href="http://www.bewelcome.org/blog/mikael/3123">invited everyone</a> to develop BeWelcome and Hitchwiki. Plenty of work was done to make Hitchwiki run more stable and easier to work on. He hosted over 15 geeks in 3 months.
+            <br><br>
+          </li>
+
+          <li>
+            In June 2014 we gathered at French alps at Rémi's family summer cottage. Preliminarily work on new layout and Phrasebook was done.
+            <br><br>
+          </li>
+        </ul>
+
+        This time we will gather in Turkey and work on Hitchwiki <em>full time.</em> Previously we've done volunteering alongside our other jobs and been quite restricted time- and energy wice.
+
+        <br><br>
+
+
+
+      </div>
+
+      <br><br>
+
+      <em>Guys, we need your help!</em>
+      <br><br>
+      We basicly need some money to cover the rent, food etc costs during our hackathon.
+
     </div>
   </div>
 </div>
 
-<div class="big_wrapper">
-  <div class="wrapper" id="three">
-    <div class="point_copy">
+
+<div class="big_wrapper" id="plan">
+  <div class="wrapper">
       <h3>
-        It's just a skeleton
+        The Plan for Code
       </h3>
-      <p>
-        We've kept Selfstarter really simple, but that also means that you should beef it up with your own authentication, administration and product management code.
-      </p>
-    </div>
+        <br><br>
+      <div class="point_copy half left">
+        <h5>Currently</h5>
+        <ul class="bread">
+          <li><a href="http://hitchwiki.org/maps/">Maps</a> and <a href="http://hitchwiki.org/en/">Wiki</a> have duplicate content</li>
+          <li>They are separate and it's annoying to check both before your hitching trip</li>
+          <li>At the wiki you don't get visual idea where locations excatly are.</li>
+          <li>Editing wiki is very cumbersome and you need to pretty much be a geek. Wikicode what what??</li>
+          <li>Things don't work very well with mobile</li>
+          <li>Nothing is <em>semantic</em> and thus hard to build new features over, say "places" or "cities".</li>
+          <li>Maps is impossible to use with mobile or pads.</li>
+        </ul>
+      </div>
+      <div class="point_copy half right">
+        <h5>Solutions</h5>
+        <p class="bread">
+          Spots from the wiki and the map in one view. You could see the comments, waiting times and ratings.
+          <br><br>
+          For editing content, <a href="http://www.mediawiki.org/wiki/VisualEditor">VisualEditor</a> is easy enough for us, humans. <a href="http://www.mediawiki.org/wiki/VisualEditor:Test?veaction=edit">Demo</a>.
+          <br><br>
+          With <a href="https://semantic-mediawiki.org/">Semantic MediaWiki</a> we should be able to separate each location into it's own block and show it at the map, have comments connected to it etc. We're not sure how this combines with VisualEditor, it'll need some experimenting.
+          <br><br>
+          On the same go we hope to make it work better on mobile, but this starts to be a bit too much promised for one hackathon. ;-) We'll try our best!
+        </p>
+      </div>
   </div>
 </div>
 
 <div class="big_wrapper">
-  <div class="wrapper" id="four">
-    <div class="point_copy right">
-      <h3>
-        Let's get started
-      </h3>
+  <div class="wrapper" id="team">
+    <h3>
+      Who are we
+    </h3>
+    <br><br>
+    <div class="point_copy half left">
+      <img src="/assets/mikael.jpg" alt="Mikael" width="100%"/>
       <p>
-        Most of what you need to get started is in the Readme. Selfstarter is based on Ruby on Rails, and we've tried to break up all of the different parts in a sensible fashion.
+        Mikael has been developing Hitchwiki since 2008. He is very active with <a href="http://www.mikaelkorpela.fi/volunteering/">projects</a> related to nomadism and free-economics.
       </p>
-    </div>
+      </div>
+      <div class="point_copy half right">
+        <img src="/assets/remi.jpg" alt="Rémi" width="100%"/>
+      <p>
+        <a href="https://github.com/Remigr">Rémi</a> is more fresh into Hitchwiki but has already helped to organize several hackathons and small <a href="http://hitchgathering.org/">Hitchgatherings</a>.
+      </p>
+      </div>
+
+      <div class="clearfix"></div>
+
+      <div class="point_copy full">
+
+        <br><hr/><br>
+
+        <p class="bread">We are two now but we're also open for talented and experienced developers joining us (MediaWiki, PHP, JavaScript). We would like to form a tiny and effective team of people who can contribute several weeks of full time work for this, rather than have guests visiting and helping for shorter times (as we've had before). Smaller team (or just two of us) is also easier to coordinate. If you'd be interested to come, please <a href="#contact">contact us</a> and tell about yourself! You're also always welcome to <a href="https://github.com/Hitchwiki/">send</a> smaller patches and participate in discussions.</p>
+      </div>
+
   </div>
 </div>
