--- a/app/views/preorder/homepage/_stats.html.erb
+++ b/app/views/preorder/homepage/_stats.html.erb
@@ -1,26 +1,32 @@
 <div class="wrapper clearfix">
+  <!--
   <div id="video">
-    <div class="embed-responsive embed-responsive-4by3"><!-- or: embed-responsive-16by9 -->
+    <div class="embed-responsive embed-responsive-4by3">
       <% if Settings.use_video_placeholder %>
         <div id="video_image">
           <img alt="video_place_holder" class="embed-responsive-item" src="/assets/video_placeholder.png" />
         </div>
-        <!--
-        <div id="player" class="hidden" style="display: none;">
-          <object>
-            <param name="movie" value="<%= Settings.video_embed_url %>?autohide=1&showinfo=0&rel=0&autoplay=1" />
-            <param name="allowFullScreen" value="true" />
-            <param name="allowscriptaccess" value="always" />
-            <embed class="embed-responsive-item" src="<%= Settings.video_embed_url %>?autohide=1&showinfo=0&rel=0&autoplay=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true"></embed>
-          </object>
-        </div>
--->
       <iframe id="player" style="display: none;" class="embed-responsive-item" src="<%= Settings.video_embed_url %>?autohide=1&showinfo=0&rel=0&autoplay=1" allowfullscreen></iframe>
 
       <% else %>
       <iframe class="embed-responsive-item" src="<%= video_url %>" allowfullscreen></iframe>
       <% end %>
     </div>
+  </div>
+  -->
+
+  <div id="intro" class="blackbox">
+
+      <h3>Hitchwiki Hackathon</h3>
+      <br>
+      <h4>
+        We will work on new Hitchwiki for 5-8 weeks in Turkey.
+      </h4>
+      <p>
+         <em>Help us to cover our expenses.</em>
+      </p>
+      <%= like_button %>
+
   </div>
 
   <div id="backing">
@@ -61,11 +67,13 @@
     <% end %>
 
     <div id="reserve_container">
-      <p id="ship_date"><%= Settings.ships %></p>
+      <!--<p id="ship_date"><%= Settings.ships %></p>-->
       <a href="/preorder/checkout" class="blue_button reserve"><%= Settings.call_to_action %></a>
-      <p id="price"><%= Settings.price_human %></p>
-      <p><%= Settings.dont_give_them_a_reason_to_say_no %></p>
-      <%= like_button %>
+      <p id="note">
+        Bank transfers, bitcoins & credit cards.
+        <br><br>
+        Note that the donation bar is updated manually and it might take a while before your donation shows up.
+      </p>
     </div>
 
   </div>
