--- a/app/views/preorder/homepage/_key_points.html.erb
+++ b/app/views/preorder/homepage/_key_points.html.erb
@@ -19,65 +19,28 @@
 
         <h4><em>Dear friends and hitchhikers family!</em></h4>
 
-        <p>
-          Behind our belowed <a href="http://hitchwiki.org/">Hitchwiki</a> is a small (but enthusiastic!) tech team. Although we are able to maintain the site and fix problems that occur every now and then, developing new features has always been a bit tricky.
-          <br><br>
-          In recent years Hitchwiki has grown quite a lot; we have over 100 000 unique visitors a month. Due popularity we've felt for quite a while that we should improve the site.
-          <br><br>
-          Our plan is to combine Wiki with Maps into one view:
-          <br><br>
-          <a href="/assets/hitchwiki_2015_pre.png" class="lightbox"><img src="/assets/hitchwiki_2015_pre.png" width="100%" alt=""></a>
-
-        </p>
-
-
-        <div class="bread">
-
+        Behind our belowed <a href="http://hitchwiki.org/">Hitchwiki</a> is a small (but enthusiastic!) tech team. Although we are able to maintain the site and fix problems that occur every now and then, developing new features has always been a bit tricky.
         <br><br>
-
-        So far we've worked mostly in coding sprints, or "hackathons" as we call them:
-
+        In recent years Hitchwiki has grown quite a lot; we have over 100 000 unique visitors a month. Due popularity we've felt for quite a while that we should improve the site.
         <br><br>
-        <ul>
-          <li>
-            In summer 2010 Mikael developed the <a href="http://hitchwiki.org/maps/">map</a> and it took him almost two months.
-            <br><br>
-          </li>
-
-          <li>
-            In May 2013 we gathered at Kasper's house in Brussels and fixed plenty of bugs and created the <a href="http://hitchwiki.org/en/">current new layout</a>. We also started <a href="http://nomadwiki.org/">Nomadwiki</a>.
-            <br><br>
-          </li>
-
-          <li>
-            In winter 2013—2014 Mikael rented a flat from Lisbon, Portugal and <a href="http://www.bewelcome.org/blog/mikael/3123">invited everyone</a> to develop BeWelcome and Hitchwiki. Plenty of work was done to make Hitchwiki run more stable and easier to work on. He hosted over 15 geeks in 3 months.
-            <br><br>
-          </li>
-
-          <li>
-            In June 2014 we gathered at French alps at Rémi's family summer cottage. Preliminarily work on new layout and Phrasebook was done.
-            <br><br>
-          </li>
-        </ul>
+        Our plan is to combine Wiki with Maps into one view:
+        <br><br>
+        <br>
+        <a href="/assets/hitchwiki_2015_pre.png" class="lightbox"><img src="/assets/hitchwiki_2015_pre.png" width="100%" alt=""></a>
+        <br>
+        <br><br>
 
         This time we will gather in Turkey and work on Hitchwiki <em>full time.</em> Previously we've done volunteering alongside our other jobs and been quite restricted time- and energy wice.
 
         <br><br>
+        <em>We need your help to cover the rent, food etc costs during our hackathon.</em>
+        <br><br>
 
-
-
-      </div>
-
-      <br><br>
-
-      <em>Guys, we need your help!</em>
-      <br><br>
-      We basicly need some money to cover the rent, food etc costs during our hackathon.
+        <%= render 'preorder/homepage/history' %>
 
     </div>
   </div>
 </div>
-
 
 <div class="big_wrapper" id="plan">
   <div class="wrapper">
