--- a/app/views/preorder/homepage/_key_points.html.erb
+++ b/app/views/preorder/homepage/_key_points.html.erb
@@ -26,7 +26,7 @@
         Our plan is to combine Wiki with Maps into one view:
         <br><br>
         <br>
-        <a href="/assets/hitchwiki_2015_pre.png" class="lightbox"><img src="/assets/hitchwiki_2015_pre.png" width="100%" alt=""></a>
+        <a href="/images/hitchwiki_2015_pre.png" class="lightbox"><img src="/images/hitchwiki_2015_pre.png" width="100%" alt=""></a>
         <br>
         <br><br>
 
@@ -82,13 +82,13 @@
     </h3>
     <br><br>
     <div class="point_copy half left">
-      <img src="/assets/mikael.jpg" alt="Mikael" width="100%"/>
+      <img src="/images/mikael.jpg" alt="Mikael" width="100%"/>
       <p>
         Mikael has been developing Hitchwiki since 2008. He is very active with <a href="http://www.mikaelkorpela.fi/volunteering/">projects</a> related to nomadism and free-economics.
       </p>
       </div>
       <div class="point_copy half right">
-        <img src="/assets/remi.jpg" alt="Rémi" width="100%"/>
+        <img src="/images/remi.jpg" alt="Rémi" width="100%"/>
       <p>
         <a href="https://github.com/Remigr">Rémi</a> is more fresh into Hitchwiki but has already helped to organize several hackathons and small <a href="http://hitchgathering.org/">Hitchgatherings</a>.
       </p>
