Text change : make it easier to understand

--- a/app/views/preorder/homepage/_key_points.html.erb
+++ b/app/views/preorder/homepage/_key_points.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="point_copy right darkbox">
       <h4>
-        Winter escape in hitchhikers -style; we'll rent an apartment from Turkey and get some coding done!
+        Winter escape in hitchhikers-style, we are going to Turkey and get some coding done for hitchwiki !
       </h4>
       <!--
       <p>
@@ -19,9 +19,9 @@
 
         <h4><em>Dear friends and hitchhikers family!</em></h4>
 
-        Behind our belowed <a href="http://hitchwiki.org/">Hitchwiki</a> is a small (but enthusiastic!) tech team. Although we are able to maintain the site and fix problems that occur every now and then, developing new features has always been a bit tricky.
+        Behind our beloved <a href="http://hitchwiki.org/">Hitchwiki</a> is a small (but enthusiastic!) tech team. Although we are able to maintain the site and fix problems that occur every now and then, developing new features has always been a bit tricky.
         <br><br>
-        In recent years Hitchwiki has grown quite a lot; we have over 100 000 unique visitors a month. Due popularity we've felt for quite a while that we should improve the site.
+        In recent years Hitchwiki has grown quite a lot, we have over 100 000 unique visitors a month. Due popularity we've felt for quite a while that we should improve the site.
         <br><br>
         Our plan is to combine Wiki with Maps into one view:
         <br><br>
@@ -30,10 +30,10 @@
         <br>
         <br><br>
 
-        This time we will gather in Turkey and work on Hitchwiki <em>full time.</em> Previously we've done volunteering alongside our other jobs and been quite restricted time- and energy wice.
+        This time we will gather in Turkey and work on Hitchwiki <em>full time.</em> Previously we've done volunteering alongside our other jobs and been quite restricted time and energy wise.
 
         <br><br>
-        <em>We need your help to cover the rent, food etc costs during our hackathon.</em>
+        <em>We need your help to cover the costs (rent, food, etc ...) during our hackathon.</em>
         <br><br>
 
         <%= render 'preorder/homepage/history' %>
@@ -45,32 +45,26 @@
 <div class="big_wrapper" id="plan">
   <div class="wrapper">
       <h3>
-        The Plan for Code
+        The plan, what we want to achieve
       </h3>
         <br><br>
       <div class="point_copy half left">
         <h5>Currently</h5>
         <ul class="bread">
-          <li><a href="http://hitchwiki.org/maps/">Maps</a> and <a href="http://hitchwiki.org/en/">Wiki</a> have duplicate content</li>
-          <li>They are separate and it's annoying to check both before your hitching trip</li>
-          <li>At the wiki you don't get visual idea where locations excatly are.</li>
-          <li>Editing wiki is very cumbersome and you need to pretty much be a geek. Wikicode what what??</li>
-          <li>Things don't work very well with mobile</li>
-          <li>Nothing is <em>semantic</em> and thus hard to build new features over, say "places" or "cities".</li>
-          <li>Maps is impossible to use with mobile or pads.</li>
+          <li>Hitchiwiki <a href="http://hitchwiki.org/maps/">Map</a> and <a href="http://hitchwiki.org/en/">Wiki</a> have seperate and duplicate content. It's annoying to check both before your hitching trip, and to find where is the best information. At the wiki you don't get visual idea where locations excatly are.</li>
+          <li>The hitchiwiki project is now really messy, nothing is structured, it is therefore hard to build new features.</li>
+          <li>Editing wiki can be complicated, and you need time to understand how it works before you can contribute.</li>
+          <li>Wiki doesn't work really well on mobile and tablets, and it's impossible to use the map on those devices.</li>
         </ul>
       </div>
       <div class="point_copy half right">
         <h5>Solutions</h5>
-        <p class="bread">
-          Spots from the wiki and the map in one view. You could see the comments, waiting times and ratings.
-          <br><br>
-          For editing content, <a href="http://www.mediawiki.org/wiki/VisualEditor">VisualEditor</a> is easy enough for us, humans. <a href="http://www.mediawiki.org/wiki/VisualEditor:Test?veaction=edit">Demo</a>.
-          <br><br>
-          With <a href="https://semantic-mediawiki.org/">Semantic MediaWiki</a> we should be able to separate each location into it's own block and show it at the map, have comments connected to it etc. We're not sure how this combines with VisualEditor, it'll need some experimenting.
-          <br><br>
-          On the same go we hope to make it work better on mobile, but this starts to be a bit too much promised for one hackathon. ;-) We'll try our best!
-        </p>
+        <ul class="bread">
+            <li>We want to bring the map and the wiki together, in a way that spots from the wiki and the map are visible in one view, where you could also see comments, waiting times, ratings.</li>
+            <li>The goal is to separate each location into its own block and show it on the map. If we achieve this we would have a really easy to use system, ready for great new features.</li>
+            <li>For editing content we want to make it as easy as posting a comment on a blog.</li>
+            <li>We hope to make the whole new wiki work on any kind of device.</li>
+        </ul>
       </div>
   </div>
 </div>
@@ -100,7 +94,7 @@
 
         <br><hr/><br>
 
-        <p class="bread">We are two now but we're also open for talented and experienced developers joining us (MediaWiki, PHP, JavaScript). We would like to form a tiny and effective team of people who can contribute several weeks of full time work for this, rather than have guests visiting and helping for shorter times (as we've had before). Smaller team (or just two of us) is also easier to coordinate. If you'd be interested to come, please <a href="#contact">contact us</a> and tell about yourself! You're also always welcome to <a href="https://github.com/Hitchwiki/">send</a> smaller patches and participate in discussions.</p>
+        <p class="bread">We are two now but we're also open for talented and experienced developers joining us (MediaWiki, PHP, JavaScript). We would like to form a tiny and effective team of people who can contribute several weeks of full time work for this, rather than have guests visiting and helping for shorter times (as we've had before). Smaller team (or just two of us) is also easier to coordinate. If you'd be interested to come, please <a href="#contact">contact us</a> and tell about yourself ! You're also always welcome to <a href="https://github.com/Hitchwiki/">send</a> smaller patches and participate in discussions.</p>
       </div>
 
   </div>
