--- a/app/views/preorder/homepage/_other_points.html.erb
+++ b/app/views/preorder/homepage/_other_points.html.erb
@@ -5,19 +5,19 @@
     <ul>
       <li id="section-1">
         <h4>Goal 1</h4>
-        <p>Combine maps and wiki into one view including markers, descriptions, comments and ratings.</p>
+        <p>Combine map and wiki into one view including markers, descriptions, comments and ratings.</p>
       </li>
       <li id="section-2">
         <h4>Goal 2</h4>
-        <p>Ensure everything works well on mobile with responsive layout. Also new API and check if it's possible to maintain <a href="http://hitchwiki.org/maps/about_api">old maps API</a>.</p>
+        <p>Ensure everything works well on mobile devices. Make it easy for everybody to edit and contribute.</p>
       </li>
       <li id="section-3">
         <h4>Goal 3</h4>
-        <p>Implement same map features to <a href="http://nomadwiki.org">Nomadwiki</a> and <a href="http://trashwiki.org">Trashwiki</a>. Imagine wild camping places and dumpsters marked on a map.</p>
+        <p>Implement same map features to <a href="http://nomadwiki.org">Nomadwiki</a> and <a href="http://trashwiki.org">Trashwiki</a>. Imagine wild camping places and dumpsterdiving spots marked on a map.</p>
       </li>
       <li id="section-4">
         <h4>Goal 4</h4>
-        <p>Work on a new project aiming to allow hitchhikers host each other and connect better in "Couch Surfing style". <a href="#">Read more</a></p>
+        <p>Work on a new project aiming to allow hitchhikers host each other and connect better in "Couch Surfing style". <a href="#">Read more.</a></p>
       </li>
     </ul>
   </div>
