Text : Add languages point

--- a/app/views/preorder/homepage/_key_points.html.erb
+++ b/app/views/preorder/homepage/_key_points.html.erb
@@ -54,6 +54,7 @@
           <li>Hitchiwiki <a href="http://hitchwiki.org/maps/">Map</a> and <a href="http://hitchwiki.org/en/">Wiki</a> have seperate and duplicate content. It's annoying to check both before your hitching trip, and to find where is the best information. At the wiki you don't get visual idea where locations excatly are.</li>
           <li>The hitchiwiki project is now really messy, nothing is structured, it is therefore hard to build new features.</li>
           <li>Editing wiki can be complicated, and you need time to understand how it works before you can contribute.</li>
+          <li>Hitchwiki exist in different languages, but the data is separated so it's really hard to translate from one to the other and to see where the good information is.</li>
           <li>Wiki doesn't work really well on mobile and tablets, and it's impossible to use the map on those devices.</li>
         </ul>
       </div>
@@ -63,6 +64,7 @@
             <li>We want to bring the map and the wiki together, in a way that spots from the wiki and the map are visible in one view, where you could also see comments, waiting times, ratings.</li>
             <li>The goal is to separate each location into its own block and show it on the map. If we achieve this we would have a really easy to use system, ready for great new features.</li>
             <li>For editing content we want to make it as easy as posting a comment on a blog.</li>
+            <li>We want to make it easy to work with different languages, we want that every hitchhiking spot have a list of avalaible languages, and an easy way to tranlate it to a new language.</li>
             <li>We hope to make the whole new wiki work on any kind of device.</li>
         </ul>
       </div>
