--- a/app/views/preorder/homepage/_other_points.html.erb
+++ b/app/views/preorder/homepage/_other_points.html.erb
@@ -9,7 +9,7 @@
       </li>
       <li id="section-2">
         <h4>Goal 2</h4>
-        <p>Ensure everything works well on mobile devices. Make it easy for everybody to edit and contribute.</p>
+        <p>Ensure everything works well on mobile devices. Make it simple to edit and contribute. Add an easy way to switch between languages.</p>
       </li>
       <li id="section-3">
         <h4>Goal 3</h4>
