--- a/app/views/preorder/homepage/_faqs.html.erb
+++ b/app/views/preorder/homepage/_faqs.html.erb
@@ -48,7 +48,7 @@
           <br><br>
           We are likely to host some people just like we would host during our "usual" lives, but we try to keep the house quiet enough for productive time. We're not establishing a <a href="http://nomadbase.info/">nomadbase</a>. Please don't choose our hackathon as a travel destination.
           <br><br>
-          There's a good change our girlfriends will be around at least part of the time, but we'll try to divide food/rent expenses in fair way so that you don't need to worry about funding "outsiders".
+          There's a good chance our girlfriends will be around at least part of the time, but we'll try to divide food/rent expenses in fair way so that you don't need to worry about funding "outsiders".
         </p>
       </details>
     </li>
