Make grammar and styling corrections

--- a/app/views/preorder/homepage/_stats.html.erb
+++ b/app/views/preorder/homepage/_stats.html.erb
@@ -23,7 +23,7 @@
         We will work on new Hitchwiki for 5-8 weeks in Turkey.
       </h4>
       <p>
-         <em>Help us to cover our expenses.</em>
+         <em>Help us cover our expenses.</em>
       </p>
       <%= like_button %>
 
