--- a/app/views/preorder/homepage/_key_points.html.erb
+++ b/app/views/preorder/homepage/_key_points.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="point_copy right darkbox">
       <h4>
-        Winter escape in hitchhikers-style, we are going to Turkey and get some coding done for hitchwiki !
+        We are making hitchhikers-style hackaton in Turkey to make Hitchwiki better!
       </h4>
       <!--
       <p>
