--- a/app/assets/stylesheets/share.css.scss
+++ b/app/assets/stylesheets/share.css.scss
@@ -1,19 +1,19 @@
 #share_container
 {
-  #congrats 
+  #congrats
   {
     padding: 70px 0;
-    h2 
+    h2
     {
       margin-bottom: 24px;
     }
-    p 
+    p
     {
       margin-bottom: 30px;
       font-size: 24px;
     }
   }
-  #share 
+  #share
   {
     margin: 0 auto;
     text-align: center;
@@ -42,7 +42,8 @@
   #order_id
   {
     margin: 0 auto;
-    margin-top: 15px;
+    margin-top: 35px;
+    clear: both;
     padding: 0px;
     opacity: 0.3;
     z-index: 9999;
