--- a/app/views/preorder/share.html.erb
+++ b/app/views/preorder/share.html.erb
@@ -6,8 +6,9 @@
     <p>
       Great! You're our <%= Settings.primary_stat_verb %> number <span id="backer_number"><%= number_with_delimiter Order.backers, :delimiter => "," %></span>, in helping to organize Hitchwiki hackathon.
       <br><br>
-      Please share info:
-      <br />
+      Please share our campaign on all channels:
+      <br><br>
+      <a href="<%= encoded_root_url %>"><%= encoded_root_url %></a>
     </p>
     <div id="share" class="clearfix">
       <div id='tweet_button_container'>
