--- a/app/views/preorder/checkout.html.erb
+++ b/app/views/preorder/checkout.html.erb
@@ -10,6 +10,11 @@
     <div class="main_content <%= "payment_options" if Settings.use_payment_options %>">
 
       <h3>Donate</h3>
+
+      <p>
+        Donations are going via <a href="http://www.abgefahren-ev.de/">Abgefahren e.V.</a> — a german hitchhiking club and a registered nonprofit.
+      </p>
+
       <br><br>
 
       <div class="payment-creditcard">
