--- a/app/views/preorder/checkout.html.erb
+++ b/app/views/preorder/checkout.html.erb
@@ -93,8 +93,8 @@
     <p><em>Easiest option for Europeans</em>
       <br><br>
 
-      IBAN: <span class="numbers">123 123</span><br>
-      BIC/Swift: <span class="numbers">123123</span>
+      IBAN: <span class="numbers">DE48 4306 0967 1168 2115 00</span><br>
+      BIC/Swift: <span class="numbers">GENODEM1GLS</span>
 
       <br><br>
       <em>Please note that it'll take a couple of days for these to register and become visible at the donation bar.</em>
@@ -103,6 +103,7 @@
   </div>
   <!-- /SEPA -->
 
+  <!--
   <div class="payment-bitcoin">
     <h4>Bitcoins</h4>
     <p>
@@ -112,6 +113,7 @@
     </p>
 
   </div>
+  -->
   <!-- /Bitcoins -->
 
   </div>
