--- a/app/views/preorder/index.html.erb
+++ b/app/views/preorder/index.html.erb
@@ -3,4 +3,5 @@
 <%= render 'preorder/homepage/other_points' %>
 <%= render 'preorder/homepage/middle_reserve' %>
 <%= render 'preorder/homepage/faqs' %>
+<%= render 'preorder/homepage/comments' %>
 <%= render 'preorder/homepage/press' %>
