--- a/app/views/preorder/homepage/_other_points.html.erb
+++ b/app/views/preorder/homepage/_other_points.html.erb
@@ -17,7 +17,7 @@
       </li>
       <li id="section-4">
         <h4>Goal 4</h4>
-        <p>Work on a new project aiming to allow hitchhikers host each other and connect better in "Couch Surfing style". <a href="#">Read more.</a></p>
+        <p>Work on a new project aiming to allow hitchhikers find & host each other on the road. We want to add possiblity to register there with Hitchwiki accounts. <a href="http://ideas.trustroots.org">Read more.</a></p>
       </li>
     </ul>
   </div>
