Point notes URL to Hitchwiki

--- a/app/views/preorder/homepage/_faqs.html.erb
+++ b/app/views/preorder/homepage/_faqs.html.erb
@@ -26,7 +26,7 @@
             <br><br>
             <u>Two months:</u> 2 * 600—800 € = <u>1200—1600 €</u>
             <br><br>
-            We will open the whole process up at our <a href="https://lite4.framapad.org/p/turkishhackathon">notes</a>.
+            We will open the whole process up at our <a href="http://hitchwiki.org/en/Hitchwiki:Hackathon_in_Turkey_2014">notes</a>.
           </p>
         </details>
       </li>
