--- a/app/views/preorder/homepage/_comments.html.erb
+++ b/app/views/preorder/homepage/_comments.html.erb
@@ -3,6 +3,9 @@
       <div class="point_copy full">
         <h4>Discussion</h4>
         <div class="fb-comments" data-href="<%= encoded_root_url %>" data-width="100%" data-numposts="5" data-colorscheme="light"></div>
+          <div class="comments-alternative">
+              <p>If you don't want to use Facebook to communicate, you can : send us an email at <img src="http://hitchwiki.org/wordpress/wp-content/plugins/hitchwiki/img/contact.png" alt="Contact us" />, <a target="_blank" href="http://hitchwiki.org/chat/">chat</a> with us, or <a target="_blank" href="http://hitchwiki.org/groups/hitchwiki/">comment</a> on hitchwiki.org.</p>
+          </div>
     </div>
   </div>
 </div>
