Small text changes to donation page

--- a/app/views/preorder/checkout.html.erb
+++ b/app/views/preorder/checkout.html.erb
@@ -12,7 +12,7 @@
       <h3>Donate</h3>
 
       <p>
-        Donations are going via <a href="http://www.abgefahren-ev.de/">Abgefahren e.V.</a> — a german hitchhiking club and a registered nonprofit.
+        Donations are going via <a href="http://www.abgefahren-ev.de/">Abgefahren e.V.</a> — a german hitchhiking club and a registered nonprofit behind Hitchwiki.org.
       </p>
 
       <br><br>
@@ -93,7 +93,7 @@
     <p><em>Easiest option for Europeans</em>
       <br><br>
 
-      IBAN: <span class="numbers">DE48 4306 0967 1168 2115 00</span><br>
+      IBAN: <span class="numbers">DE48430609671168211500</span><br>
       BIC/Swift: <span class="numbers">GENODEM1GLS</span>
 
       <br><br>
