Visual improvement to IBAN

--- a/app/views/preorder/checkout.html.erb
+++ b/app/views/preorder/checkout.html.erb
@@ -90,12 +90,16 @@
 
   <div class="payment-sepa">
     <h4>Bank transfer (SEPA)</h4>
-    <p><em>Easiest option for Europeans</em>
+    <p><em>Easiest option for Europeans.</em>
       <br><br>
 
-      IBAN: <span class="numbers">DE48430609671168211500</span><br>
-      BIC/Swift: <span class="numbers">GENODEM1GLS</span>
+      <span class="numberlines">
+        IBAN: <span class="numbers">DE48430609671168211500</span><br>
+        BIC/Swift: <span class="numbers">GENODEM1GLS</span>
+      </span>
 
+      <br><br>
+      It's an euro account in German bank.
       <br><br>
       <em>Please note that it'll take a couple of days for these to register and become visible at the donation bar.</em>
 
@@ -116,5 +120,14 @@
   -->
   <!-- /Bitcoins -->
 
+  </div>
+  </div>
+</div>
+
+<div class="big_wrapper">
+  <div class="wrapper">
+    <div class="point_copy full">
+        <a href="/">Read more about the campaign...</a>
+    </div>
   </div>
 </div>
