--- a/app/assets/stylesheets/checkout.css.scss
+++ b/app/assets/stylesheets/checkout.css.scss
@@ -240,8 +240,21 @@
     width: 400px;
     float: left;
     margin: 0 40px 40px 0;
+    .numberlines {
+      line-height: 1.1em;
+    }
     .numbers {
+      display: inline-block;
+      padding-left: 4px;
+      padding-right: 4px;
       font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+      background: #fff;
+    }
+    em {
+      font-style: italic;
+    }
+    b, strong {
+      font-weight: bold;
     }
 }
 
