--- a/app/views/preorder/homepage/_history.html.erb
+++ b/app/views/preorder/homepage/_history.html.erb
@@ -3,9 +3,7 @@
   <summary>Short history of Hitchwiki hackathons</summary>
     <div class="bread">
       <br>
-      We already have some experience on organizing such events.
-      <br><br>
-      Previously we've worked in coding sprints, or "hackathons" as we call them:
+      We already have some experience on organizing such events. Previously we've worked in coding sprints, or "hackathons" as we call them:
       <br><br>
       <ul>
         <li>
@@ -24,7 +22,7 @@
         </li>
 
         <li>
-          In June 2014 we gathered at French alps at Rémi's family summer cottage. Preliminarily work on new layout and Phrasebook was done.
+          In June 2014 we gathered at French Alps at Rémi's family's summer cottage. Preliminarily work on new layout and Phrasebook was done.
           <br><br>
         </li>
       </ul>
